# sigfox-ep-addon-rfp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: precompile_addon_rfp.cmake
inc/: sigfox_ep_addon_rfp_api.h  sigfox_ep_addon_rfp_version.h
inc/test_modes_rfp/: sigfox_rfp_test_mode_types.h
inc/tests_mode/: sigfox_rfp_test_mode_types.h
src/: sigfox_ep_addon_rfp_api.c
src/test_modes_rfp/: sigfox_rfp_test_mode_a.c  sigfox_rfp_test_mode_b.c  sigfox_rfp_test_mode_c.c  sigfox_rfp_test_mode_d.c  sigfox_rfp_test_mode_e.c  sigfox_rfp_test_mode_f.c  sigfox_rfp_test_mode_g.c  sigfox_rfp_test_mode_j.c  sigfox_rfp_test_mode_k.c  sigfox_rfp_test_mode_l.c
src/tests_mode/: sigfox_rfp_test_mode_a.c  sigfox_rfp_test_mode_b.c  sigfox_rfp_test_mode_c.c  sigfox_rfp_test_mode_d.c  sigfox_rfp_test_mode_e.c  sigfox_rfp_test_mode_f.c  sigfox_rfp_test_mode_g.c  sigfox_rfp_test_mode_j.c  sigfox_rfp_test_mode_k.c  sigfox_rfp_test_mode_l.c
